style menu on small screens, set header to fixed width

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  --header-height: 63.3px;
   --font-primary: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   --font-secondary: "Lao Mn";
   --clr-light-grey: #f8f8f7;
